fix(data explorer): allow scroll in field selector

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -383,6 +383,11 @@
   .data-explorer-topic-icon {
     margin-right: 0.1em;
   }
+
+  .react-autoql-menu {
+    overflow-y: auto;
+    max-height: 200px;
+  }
 }
 
 @keyframes slideDown {
