data explorer copy change

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -132,6 +132,7 @@
       .react-autoql-input-label {
         display: inline;
         padding-left: 8px;
+        white-space: pre-wrap;
       }
 
       .data-preview-section {
