feat: add summary stats to table column tooltips

--- a/src/components/SelectableTable/SelectableTable.scss
+++ b/src/components/SelectableTable/SelectableTable.scss
@@ -221,6 +221,24 @@
   }
 }
 
+.react-autoql-response-content-container .react-tooltip.selectable-table-column-header-tooltip {
+  padding: 13px 20px !important;
+
+  .selectable-table-tooltip-subtitle {
+    font-style: italic;
+    margin-bottom: 5px;
+  }
+
+  .selectable-table-tooltip-section {
+    font-size: 11px;
+  }
+
+  .selectable-table-tooltip-title {
+    font-weight: 600;
+    font-size: 12px;
+  }
+}
+
 .react-tooltip.selectable-table-column-header-tooltip {
   --border-color: var(--react-autoql-border-color);
   --bg-color: var(--react-autoql-background-color-secondary);
@@ -241,21 +259,24 @@
     background: var(--bg-color);
   }
 
-  p {
-    margin-bottom: 0;
+  .table-tooltip-summary-stats-section {
+    margin-left: 5px;
   }
 
   .selectable-table-tooltip-section {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-
-    &:not(:last-child) {
-      margin-bottom: 5px;
-    }
+    font-size: 0.9em;
+    white-space: pre-wrap;
+    font-size: 12px;
   }
 
   .selectable-table-tooltip-title {
     font-weight: 600;
+  }
+
+  .react-autoql-icon {
+    margin-right: 3px;
   }
 }
