add time zone feature to right away and fixed a bug

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -174,7 +174,7 @@
         .react-autoql-response-content-container {
           // max-height: 300px !important;
           flex: 1;
-          height: unset;
+          height: 50vh;
           max-height: 100%;
 
           .react-autoql-table-container .react-autoql-table.tabulator {
