--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -158,7 +158,7 @@
       flex-direction: column;
       position: relative;
       flex: 1;
-      overflow: hidden;
+      // overflow: hidden;
       padding: 13px;
       border-radius: 6px;
       max-width: 100%;
