--- a/src/components/Popover/Popover.scss
+++ b/src/components/Popover/Popover.scss
@@ -32,6 +32,7 @@
         flex-direction: column;
         flex: 1;
         overflow: hidden;
+        box-shadow: var(--react-autoql-box-shadow-2);
       }
     }
 
