--- a/src/components/AddColumnBtn/AddColumnBtn.scss
+++ b/src/components/AddColumnBtn/AddColumnBtn.scss
@@ -45,7 +45,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
     }
 
     .react-autoql-menu-expand-arrow {
