--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -90,11 +90,19 @@
     }
   }
 
+  .react-autoql-table-add-column-btn {
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+  }
+
   &:hover .react-autoql-toolbar,
+  &:hover .react-autoql-table-add-column-btn,
+  .react-autoql-table-add-column-btn.active,
   .react-autoql-toolbar.active {
-    pointer-events: auto;
-    visibility: visible;
-    opacity: 1;
+    pointer-events: auto !important;
+    visibility: visible !important;
+    opacity: 1 !important;
   }
 
   .react-autoql-toolbar-mobile {
