fix: add column btn location

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -185,7 +185,7 @@
 
 .react-autoql-dashboard-tile-inner-div {
   .react-autoql-table-add-column-btn {
-    right: 0;
+    right: 15px;
     top: 5px;
   }
 
