make DA modal more compact

--- a/src/components/Notifications/DataAlertModal/DataAlertModal.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertModal.scss
@@ -41,7 +41,8 @@
   flex-direction: column;
 
   .react-autoql-steps-hoz-container {
-    padding: 20px 100px;
+    padding: 0px 100px;
+    padding-bottom: 10px;
   }
 
   .react-autoql-data-alert-modal-step {
