--- a/src/components/AddColumnBtn/CustomColumnModal.scss
+++ b/src/components/AddColumnBtn/CustomColumnModal.scss
@@ -163,10 +163,21 @@
               padding-bottom: 0;
             }
           }
+        }
 
+        .react-autoql-input-and-label-container {
           input {
             background: var(--react-autoql-background-color-secondary) !important;
             border-radius: 0 !important;
+          }
+          .react-autoql-select {
+            font-size: 18px;
+            line-height: 34px;
+            color: var(--react-autoql-accent-color);
+
+            .react-autoql-icon {
+              padding-bottom: 0;
+            }
           }
         }
       }
