--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -1,7 +1,7 @@
 .react-autoql-rule-simple {
   .react-autoql-data-alert-filters-container {
     padding: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 
   .data-alert-description-span {
@@ -22,18 +22,17 @@
   }
 
   .react-autoql-rule-field-selection-grid-container {
-    height: 100px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    padding-left: 20px;
+    max-height: 150px;
+    display: flex;
+    flex-direction: column;
 
     .react-autoql-input-label {
       display: inline;
       padding-left: 5px;
     }
-    .react-autoql-selectable-table {
-      padding: 0px 5px 5px 5px;
-    }
+    // .react-autoql-selectable-table {
+    //   padding: 0px 5px 5px 5px;
+    // }
   }
   .react-autoql-notification-rule-container {
     display: flex;
