--- a/src/components/SelectableTable/SelectableTable.scss
+++ b/src/components/SelectableTable/SelectableTable.scss
@@ -20,6 +20,8 @@
   }
 
   .react-autoql-selectable-table-wrapper {
+    display: flex;
+    flex-direction: column;
     position: relative;
     white-space: nowrap;
     text-overflow: ellipsis;
