--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -7,6 +7,7 @@
   .data-alert-description-span {
     display: inline-block;
     margin-bottom: 10px;
+    margin-left: 5px;
     white-space: pre;
   }
 
