--- a/src/components/Notifications/DataAlertModal/DataAlertModal.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertModal.scss
@@ -4,6 +4,11 @@
 
 .react-autoql-data-alert-creation-modal {
   height: calc(100vh - 90px);
+
+  .react-autoql-alert-type-btn-active {
+    background-color: var(--react-autoql-accent-color);
+  }
+
   .react-autoql-modal-footer {
     padding: 0;
 
@@ -41,8 +46,14 @@
   flex-direction: column;
 
   .react-autoql-steps-hoz-container {
-    padding: 40px 100px;
-    padding-bottom: 35px;
+    padding: 0px 100px;
+    padding-bottom: 20px;
+  }
+
+  .react-autoql-data-alert-type-step {
+    flex: 1;
+    width: 100%;
+    margin-top: 20px;
   }
 
   .react-autoql-data-alert-modal-step {
