--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -37,6 +37,7 @@
   color: var(--react-autoql-text-color-primary);
 
   .notification-feed-list {
+    padding: 2px;
     padding-right: 12px;
     padding-bottom: 10px;
     overflow: hidden;
@@ -54,7 +55,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 15px 8px 8px 8px;
+  padding: 15px 13px 8px;
   flex: 0;
 
   .react-autoql-notification-delete-all,
