feat: add notification delete animation

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -10,14 +10,30 @@
   box-shadow: var(--react-autoql-box-shadow-1);
 
   margin-bottom: 8px;
+  opacity: 1;
 
   color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.6));
   font-family: var(--react-autoql-font-family), sans-serif;
 
-  // transition: all 1s ease;
-  transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
+  transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1), box-shadow 0.3s ease, margin-bottom 0.5s ease,
+    max-height 0.3s ease, opacity 0.3s ease !important;
   animation: slideIn 0.5s cubic-bezier(0.26, 0.26, 0, 1);
   animation-fill-mode: both;
+
+  &.expanded {
+    max-height: 100vh;
+  }
+
+  &.collapsed {
+    max-height: 150px;
+  }
+
+  &.react-autoql-notification-item-deleted {
+    max-height: 0px !important;
+    opacity: 0 !important;
+    margin-bottom: 0px !important;
+    box-shadow: none;
+  }
 
   &.is-error {
     .react-autoql-notification-alert-strip {
