--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -203,6 +203,8 @@
 }
 .react-autoql-query-validation-select.react-autoql-select-and-label {
   padding: 0 !important;
+  border-bottom-style: dashed !important;
+  height: 1.5em;
 
   .react-autoql-select {
     position: relative;
@@ -216,7 +218,6 @@
     margin: 0;
     padding: 0 !important;
     border-radius: 0;
-    border-bottom: 1px dashed;
     color: var(--react-autoql-accent-color);
   }
 }
